Update response type annotation and regen swagger.
